--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advice Generator App</title>
+    <base target="_blank" rel="noopener noreferrer">
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;800&display=swap"
       rel="stylesheet"
     />
   </head>
